# synaptix

./: .antigravity-rules  .env.example  .gitattributes  .gitignore  AGENTS.md  AOIP_MASTER_SPEC_v5.md  FIRST_SESSION_GUIDE.md  INVENTORY.md  README.md  alembic.ini  append_tests.py  docker-compose.yml  list_deferred.py  pyproject.toml  run-all.bat  undefer.py  update_manifest.py  write_handlers.py
.agent-memory/incident/: 00-orchestrator.md  01-architect.md  02-backend.md  03-frontend.md  04-mobile.md  05-database.md  06-testing.md  07-security.md  08-code-reviewer.md  09-devops.md  10-documentation.md  11-nmc-compliance.md
.agent-memory/learning/: 00-orchestrator.md  01-architect.md  02-backend.md  03-frontend.md  04-mobile.md  05-database.md  06-testing.md  07-security.md  08-code-reviewer.md  09-devops.md  10-documentation.md  11-nmc-compliance.md
.agent-memory/working/: 00-orchestrator.md  01-architect.md  02-backend.md  03-frontend.md  04-mobile.md  05-database.md  06-testing.md  07-security.md  08-code-reviewer.md  09-devops.md  10-documentation.md  11-nmc-compliance.md  CURRENT_FOCUS.md  QUESTIONS.md
.github/workflows/: ci.yml
agents/: 00-orchestrator-agent.md  01-architect-agent.md  02-backend-agent.md  03-frontend-agent.md  04-mobile-agent.md  05-database-agent.md  06-testing-agent.md  07-security-agent.md  08-code-reviewer-agent.md  09-devops-agent.md  10-documentation-agent.md  11-nmc-compliance-agent.md
conventions/: API_DESIGN.md  CODING_STANDARDS.md  COMMIT_CONVENTIONS.md  DATABASE_CONVENTIONS.md  ERROR_HANDLING.md
docs/: AGENT_LEARNINGS.md  ARCHITECTURE.md  BUG_LOG.md  CHANGELOG.md  COMMAND_HISTORY.md  COST_LOG.md  DECISIONS.md  DEPENDENCY_LOG.md  DEVELOPMENT_LOG.md  HANDOFF_NOTES.md  INCIDENT_LOG.md  KNOWN_ISSUES.md  MIGRATION_LOG.md  NMC_COMPLIANCE_LOG.md  PERFORMANCE_LOG.md  PHASE2_SCHEMA.md  PHASE3_SCHEMA.md  UAT_LOG.md
docs/plans/: F2+S17 Plan.md  F3+S19 Plan.md  F4+S20-21.md  Phase2 Complete Implementation Plan.md  Session 10 Plan.md  Session 12 PLan.md  Session 13 PLan.md  Session 14 Plan.md  Session 15 plan.md  Session 16 plan.md  Session f1 plan.md  Session11 Plan.md  e2e1 plan.md  implementation_plan_1a_part3_archived.md  implementation_plan_1b_redesign_v1.md
docs/sessions/: 2026-06-20-session-1.md  2026-06-20-session-2.md  2026-06-20-session-3.md  2026-06-20-session-4.md  2026-06-20-session-5.md  2026-06-20-session-6.md  2026-06-27-session-7.md  2026-06-27-session-8.md  2026-06-30-session-10.md  2026-06-30-session-9.md  2026-07-01-session-11.md  2026-07-01-session-12.md  2026-07-01-session-13.md  2026-07-01-session-14.md  2026-07-04-session-1.md  2026-07-04-session-17.md  2026-07-04-session-19.md  2026-07-04-session-2.md  2026-07-04-session-3.md  2026-07-06-session-20.md  2026-07-06-session-21.md  2026-07-07-session-22.md  2026-07-07-session-23.md  2026-07-11-session-24.md  2026-07-11-session-25.md  2026-07-11-session-26.md  TEMPLATE.md
docs/verification/: adr_034_trace_20260630.md  baseline_adr_20260701.txt  baseline_compliance_20260701.txt  baseline_coverage_20260701.txt  baseline_edge_cases_20260701.txt  phase2_scorecard.md  phase2_test_categorisation.md  phase3_baseline_20260704.txt  phase3_test_categorisation.md  post_deferral_coverage_20260701.txt
frontend-web/: .env.example  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts
frontend-web/src/app/: globals.css  layout.tsx
frontend-web/src/hooks/: use-attendance.ts  use-dashboard.ts  use-doap.ts  use-electives.ts  use-leave.ts  use-logbook.ts
frontend-web/src/lib/: api.ts  auth.ts
frontend-web/src/stores/: auth-store.ts
frontend-web/src/types/: attendance.ts  doap.ts  electives.ts  leave.ts  logbook.ts
frontend-web/tests/e2e/: attendance.spec.ts  auth.spec.ts  electives.spec.ts  global-setup.ts  leave.spec.ts  navigation.spec.ts
scripts/: check_secrets.py  init-db.sql  pre-commit-hook.ps1  seed_electives_dev.py  seed_m1_data.py  seed_m2_data.py  seed_student_dashboard_data.py  setup-local-dev.ps1  smoke-test.py  test_phase3_constraints.sql  update-docs.ps1  verify_adr_034_trace.py  verify_adr_sequence.py  verify_compliance_coverage.py  verify_coverage_manifest.py  verify_docs_updated.py  verify_edge_case_coverage.py
scripts/admin/: seed_jmn_mdm.py  seed_jmn_operational.py
services/_migrations/: env.py  pyproject.toml
services/_migrations/versions/: 20260620_0001_foundation_tables.py  20260620_0002_create_academic_structure_tables.py  20260620_0003_add_user_otp_fields.py  20260620_0004_add_role_soft_delete.py  20260620_0005_academic_and_institutional_tables.py  20260620_0006_master_data_tables.py  20260620_0007_workflow_engine_tables.py  20260620_0008_digital_assets_tables.py  20260620_0009_phase1b_academic_tables.py  20260620_0010_phase1b_logbook_tables.py  20260620_0011_phase2_attendance_and_leave.py  20260620_0012_phase2_logbook_electives_doap.py  20260620_0013_phase2_admissions.py  20260630_0014_add_elective_allocation_runs.py  20260630_bf787ada4ee4_add_doap_evidence_and_notes.py  20260701_d7ce0e58cbc0_resolve_schema_gaps.py  20260704_756453b2326d_create_mdm_configs.py  20260704_a9054655e43f_fix_fcs_trigger_column.py  20260706_b3e3a9c7b418_core_exam_tables.py  20260706_b3e3a9c7b419_ia_aggregation_eligibility.py  20260706_b3e3a9c7b420_results_mark_sheets.py
services/snx-academic/: Dockerfile  pyproject.toml
services/snx-auth/: Dockerfile  pyproject.toml
services/snx-institution/: Dockerfile  pyproject.toml
services/snx-logbook/: Dockerfile  pyproject.toml
services/snx-workflow/: Dockerfile  pyproject.toml
tests/: COVERAGE_MANIFEST.yaml  EDGE_CASES.md  NMC_COMPLIANCE_TESTS.md  TESTING_STRATEGY.md  conftest.py
tests/compliance/: test_attendance_thresholds.py  test_elective_compliance.py  test_nmc_compliance_stubs.py
tests/integration/: test_academic_service.py  test_attendance.py  test_attendance_engine.py  test_auth_service.py  test_calendar_engine.py  test_electives.py  test_institution_service.py  test_leave.py  test_lesson_plan_service.py  test_logbook_service.py  test_sync.py
tests/unit/: test_jwt_utils.py
(+216 files in other folders)
