[project]
name = "synaptix"
version = "0.1.0"
description = "Academic Operations & Intelligence Platform — Nirmala Foundation"
requires-python = "==3.12.*"
readme = "README.md"
license = { text = "Proprietary" }
dependencies = [
    "qrcode[pil]>=8.2",
    "weasyprint>=69.0",
]

[tool.uv]
# All workspace members share this virtual environment
workspace = { members = ["packages/shared", "services/*"] }

[tool.uv.sources]
synaptix-shared = { workspace = true }

# ==============================================================================
# Dev dependencies (PEP 735 dependency groups — supported by uv)
# ==============================================================================
[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-asyncio==0.23.8",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "factory-boy>=3.3",
    "faker>=25.0",
    "freezegun>=1.5",
    "ruff>=0.4",
    "black>=24.0",
    "mypy>=1.10",
    "alembic>=1.13",
    "pre-commit>=3.7",
    "structlog>=24.1",
    "python-jose[cryptography]>=3.3",
    "pydantic[email]>=2.7",
    "pydantic-settings>=2.2",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "passlib[bcrypt]>=1.7",
    "pyotp>=2.9",
]

# ==============================================================================
# Ruff (linter)
# ==============================================================================
[tool.ruff]
target-version = "py312"
line-length = 100
exclude = [
    "alembic/versions/",
    ".venv/",
    "build/",
    "dist/",
    "append_tests.py",
    "list_deferred.py",
    "undefer.py",
    "update_manifest.py",
    "write_handlers.py",
]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "S", "A", "COM", "C4", "PT", "SIM", "ARG", "PL"]
ignore = [
    "COM812",   # trailing comma (conflicts with black)
    "ISC001",   # implicit string concatenation (conflicts with black)
    "S101",     # use of assert (fine in tests)
    "PLR0913",  # too many arguments (domain functions need many args)
    "A002",     # shadowing python builtin (e.g. id)
    "PLC0415",  # local imports (fine for avoiding circular imports)
    "ARG001",   # unused function argument (FastAPI dependency injection patterns)
    "B008",     # function call in argument defaults (FastAPI Form/File/Query)
    "E501",     # line too long (handled by black, ignore for long string literals)
    "B904",     # raise from (not needed in HTTP exception mapping routers)
    "SIM102",   # nested ifs (allow nested ifs for readability)
    "ARG002",   # unused method argument (allow in stub class methods)
    "PLR2004",  # magic value comparisons (acceptable in domain logic)
    "PLW0603",  # global statement (required for singleton engine pattern)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "ARG001", "ARG002", "PLR2004", "S105", "E501", "PLC0415", "PT011", "PT012", "B017", "F841", "PLR0915", "S106"]
"**/schemas/**" = ["S105"]
"scripts/**" = ["S607", "PLW1510", "PLR0915", "T201", "I001", "C414", "S112", "PLR0912", "F841", "B007"]

# ==============================================================================
# Black (formatter)
# ==============================================================================
[tool.black]
line-length = 100
target-version = ["py312"]
exclude = '''
/(
    \.git
  | \.venv
  | alembic/versions
  | build
  | dist
  | node_modules
)/
| append_tests\.py
| list_deferred\.py
| undefer\.py
| update_manifest\.py
| write_handlers\.py
'''

# ==============================================================================
# MyPy (type checker)
# ==============================================================================
[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = false
warn_return_any = true
warn_unused_ignores = true
exclude = ["alembic/", ".venv/", "build/"]

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["packages.shared.logging", "packages.shared.auth.*"]
ignore_errors = true

# ==============================================================================
# Pytest
# ==============================================================================
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--tb=short",
    "-q",
]
markers = [
    "unit: unit tests (fast, no DB)",
    "integration: integration tests (require DB)",
    "compliance: NMC compliance tests (HARD FAIL — do not modify)",
    "e2e: end-to-end tests",
    "slow: slow tests",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::ResourceWarning",
    "ignore::RuntimeWarning",
]

# ==============================================================================
# Coverage
# ==============================================================================
[tool.coverage.run]
source = ["packages", "services"]
omit = [
    "*/tests/*",
    "*/alembic/*",
    "*/__init__.py",
    "*/migrations/*",
]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = false
